--- a/src/assets/css/bcentral.css
+++ b/src/assets/css/bcentral.css
@@ -8,6 +8,7 @@
 :root {
 	--azul_claro: #314A6E;
 	--azul_texto: #2B637F;
+	--azul_oscuro: #122538;
 	--gris_claro: #F1F1F1;
 	--gris_oscuro: #707070;
 	--gris_texto: #8C9091;
@@ -120,12 +121,14 @@ header .navbar-brand img.logo {
 #title .banco {
 	font-size: 22px;
 	font-family: LatoRegular;
+	text-align: left;
 }
 /* Menus */
 #topbar {
 	display: flex;
+    flex-direction: column;
+    margin-top: 40px;
     align-items: flex-end;
-	margin-top: 50px;
 }
 #menu-principal {
 	font-size: 14px;
@@ -151,28 +154,33 @@ header .navbar-brand img.logo {
 	color: white;
 	text-decoration: none;
 }
-#menu-principal .flag {
+#languageSelection .flag {
 	-moz-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
 	 -o-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
 	 -webkit-filter: grayscale(100%);
 	 filter: gray;
 	 filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
 }
-#menu-principal .flag.en {
+#languageSelection .flag:active,
+#languageSelection .flag:hover,
+#languageSelection .flag:focus {
+	filter: none;
+}
+#languageSelection .flag.en {
 	width: 20px;
 	height: 20px;
-	background: url(/xmlui/themes/Mirage2/images/en.png) no-repeat center center;
+	background: url(../images/portada/en.png) no-repeat center center;
 	background-size: contain;
 }
-#menu-principal .flag.es_ES {
+#languageSelection .flag.es_ES {
 	width: 20px;
 	height: 20px;
-	background: url(/xmlui/themes/Mirage2/images/es.png) no-repeat center center;
+	background: url(../images/portada/es.png) no-repeat center center;
 	background-size: contain;
 }
 header .navbar-default .navbar-toggle, 
 header .navbar-default .navbar-nav {
-	max-width: 100px;
+	/*max-width: 100px;*/
 }
 /* Botón de Login */
 header .navbar-default .navbar-toggle>li,
@@ -461,6 +469,7 @@ footer>.container {
 .articulo .informacion {
 	color: white;
 	padding: 20px;
+	text-align: left;
 }
 .articulo .titulo {
 	font-size: 32px;
@@ -522,6 +531,7 @@ color: white;
 }
 .seccion {
 	padding: 0 20px;
+	text-align: left;
 }
 .seccion.home {
 	padding: 20px;
@@ -1077,4 +1087,13 @@ span.h6 {
 }
 #descripcion.tabcontent {
 	display: block;
+}
+
+/* Language Selection */
+#languageSelection {
+	width: fit-content;
+	border-radius: 5px;
+}
+#languageSelection span {
+	font-size: 10px;
 }
